Use wiki routing for categories

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/edwiki/edwiki#readme",
   "dependencies": {
     "body-parser": "~1.15.2",
+    "capitalize": "^1.0.0",
     "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
